[project]
name = "dataset-access-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "cmocean>=4.0.3",
    "dask>=2025.3.0",
    "easygems>=0.0.14",
    "fsspec>=2025.3.0",
    "healpix>=2024.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mystmd>=1.3.25",
    "requests>=2.32.3",
    "xarray>=2025.3.0",
    "zarr>=3.0.6",
]
